--- a/OutliersAPP.SPA/src/index.html
+++ b/OutliersAPP.SPA/src/index.html
@@ -23,7 +23,12 @@
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/lib/font-awesome/css/font-awesome.min.css">
   <link href="assets/lib/font-awesome/css/font-awesome.css" rel="stylesheet" />
+  <!-- <link href="assets/lib//bootstrap/js/bootstrap.min.js"> -->
+  <link href="assets/lib/jquery/jquery.min.js">
+  <link href="assets/lib/jquery-3.3.1.slim.min.js">
+  <link href="assets/lib/popper.min.js">
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/style-responsive.css" rel="stylesheet">
 </head>
