--- a/OutliersAPP.SPA/src/index.html
+++ b/OutliersAPP.SPA/src/index.html
@@ -20,6 +20,8 @@
   <!-- <link href="//fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i" rel="stylesheet"> -->
     <!-- Bootstrap core CSS -->
   <!-- Favicons -->
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
