--- a/OutliersAPP.SPA/src/index.html
+++ b/OutliersAPP.SPA/src/index.html
@@ -51,5 +51,6 @@
   <script src="assets/lib/jquery.scrollTo.min.js"></script>
   <script src="assets/lib/jquery.nicescroll.js" type="text/javascript"></script>
   <script src="assets/lib/common-scripts.js"></script>
+  <script src="assets/js.js"></script>
 </body>
 </html>
