--- a/OutliersAPP.SPA/src/index.html
+++ b/OutliersAPP.SPA/src/index.html
@@ -42,7 +42,7 @@
 
 
 
-
+ 
   <script src="assets/lib/jquery/jquery.min.js"></script>
   <script src="assets/lib/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/lib/jquery-ui-1.9.2.custom.min.js"></script>
@@ -52,5 +52,7 @@
   <script src="assets/lib/jquery.nicescroll.js" type="text/javascript"></script>
   <script src="assets/lib/common-scripts.js"></script>
   <script src="assets/js.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/angular-sanitize/1.6.4/angular-sanitize.min.js"></script>
+  <script src="/bower_components/angular-read-more/readmore.min.js"></script>
 </body>
 </html>
